--- a/Aula02 - Internal Style.html
+++ b/Aula02 - Internal Style.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Inline Style</title>
+        <title>Internal Style sheet</title>
         <meta charset="útf-8">
+
+        <!--
+            O estilo é definido dentro da página com a utilização
+            de seletores
+        -->
+        <style type="text/css">
+
+        </style>
     </head>
     <body>
 
-        <h1> Formatação usando Inline Style</h1>
+        <h1> Formatação usando Internal Style Sheet</h1>
+
+
+        <!--<img src="img/regra-css.jpg">-->
         
-        <p style="color:blue;"> <!--propriedade color dentro da tag-->
+        <p>
             Et er en kendsgerning, at man bliver distraheret af læsbart indhold 
             på en side, når man betragter dens layout. Meningen med at bruge Lorem Ipsum 
             er, at teksten indeholder mere eller mindre almindelig tekstopbygning i modsætning 
@@ -19,7 +30,7 @@
             på grund af fejl og andre gange med vilje (som blandt andet et resultat af humor).
         </p>
 
-        <p style="color:red">
+        <p>
             Et er en kendsgerning, at man bliver distraheret af læsbart indhold 
             på en side, når man betragter dens layout. Meningen med at bruge Lorem Ipsum 
             er, at teksten indeholder mere eller mindre almindelig tekstopbygning i modsætning 
