--- a/Aula02 - Internal Style.html
+++ b/Aula02 - Internal Style.html
@@ -9,6 +9,12 @@
             de seletores
         -->
         <style type="text/css">
+            p{
+                color:red;
+            }
+            h1{
+                color:blue;
+            }
 
         </style>
     </head>
@@ -17,7 +23,13 @@
         <h1> Formatação usando Internal Style Sheet</h1>
 
 
-        <!--<img src="img/regra-css.jpg">-->
+        <!--
+            imagem com o padrão dos seletores css
+            que permite formatar tag html
+        -->
+        <!--
+            <img src="img/regra-css.jpg">
+        -->
         
         <p>
             Et er en kendsgerning, at man bliver distraheret af læsbart indhold 
