--- a/Aula02 - Internal Style.html
+++ b/Aula02 - Internal Style.html
@@ -5,8 +5,8 @@
         <meta charset="útf-8">
 
         <!--
-            O estilo é definido dentro da página com a utilização
-            de seletores
+            O estilo é definido dentro da página com a utilização de seletores. 
+            Na pasta img a figura regra-css.jpg mostra a estrutura de um seletor
         -->
         <style type="text/css">
             p{
@@ -15,22 +15,11 @@
             h1{
                 color:blue;
             }
-
         </style>
     </head>
     <body>
 
         <h1> Formatação usando Internal Style Sheet</h1>
-
-
-        <!--
-            imagem com o padrão dos seletores css
-            que permite formatar tag html
-        -->
-        <!--
-            <img src="img/regra-css.jpg">
-        -->
-        
         <p>
             Et er en kendsgerning, at man bliver distraheret af læsbart indhold 
             på en side, når man betragter dens layout. Meningen med at bruge Lorem Ipsum 
